# WarSimulator

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  HELP.md  PREVIEWS.md  STYLE.md
include/army/: Army.h  Commander.h  Power.h
include/leader/: Leader.h
include/systems/: Multiplier.h  Rebirth.h
include/ui/: Menus.h
scripts/: scan.bat  setup.bat  tree.bat
src/army/: Army.cpp  Commander.cpp  Power.cpp
src/commander/: Commander.cpp
src/core/: Main.cpp
src/leader/: Leader.cpp
src/systems/: Multiplier.cpp  Rebirth.cpp
src/ui/: Menus.cpp
utils/include/console/: Ansi.h  Clear.h  Color.h  Delay.h  Pause.h
utils/include/math/: Clamp.h  Random.h
utils/include/text/: Effect.h  Format.h  Name.h
utils/src/console/: Ansi.cpp  Clear.cpp  Color.cpp  Delay.cpp  Pause.cpp
utils/src/math/: Clamp.cpp  Random.cpp
utils/src/text/: Effect.cpp  Format.cpp  Name.cpp
